# darkly

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  KRITA-TOOL-ARCHITECTURE.md  LICENSE  PLAN-PHASE1.md  PLAN-PHASE2.md  PLAN.md  PROBLEM.md  README.md  codecov.yml  compositing-lessons-learned.md  darkly-plan.md  gpu-lessons-learned.md  gpu-perf-lessons-learned.md  graphite-deep-dive.md  krita-plus-graphite-perf-lessons.md  paint-compute-perf-tracking.md  svelte-lessons-learned.md
crates/darkly/: Cargo.toml  build.rs
crates/darkly-gpu/: Cargo.toml
crates/darkly-gpu/src/: atlas.rs  blend.rs  compositor.rs  context.rs  filter.rs  lib.rs  staging.rs
crates/darkly-gpu/src/filters/: noise.rs
crates/darkly-gpu/tests/: profile_render.rs
crates/darkly/bench-results/: stroke-replay-matrix-approach-2-recorded_curvy_stroke-dfa4207.md  stroke-replay-matrix-approach-2-recorded_curvy_stroke-dfa4207.tsv  stroke-replay-matrix-paint-compute-recorded_curvy_stroke-b146df4220.md  stroke-replay-matrix-paint-compute-recorded_curvy_stroke-b146df4220.tsv  stroke-replay-matrix-paint-recorded_curvy_stroke-cc26144cf2.md  stroke-replay-matrix-paint-recorded_curvy_stroke-cc26144cf2.tsv  stroke-replay-matrix-recorded_curvy_stroke-613dfd39db.md  stroke-replay-matrix-recorded_curvy_stroke-613dfd39db.tsv  stroke-replay-matrix-recorded_curvy_stroke-f9895f0285.md  stroke-replay-matrix-recorded_curvy_stroke-f9895f0285.tsv  stroke-replay-matrix-stamp-color-output-recorded_curvy_stroke-5c0ea3a0ff.md  stroke-replay-matrix-stamp-color-output-recorded_curvy_stroke-5c0ea3a0ff.tsv  stroke-replay-matrix-watercolor-recorded_curvy_stroke-39c5566bc3.md  stroke-replay-matrix-watercolor-recorded_curvy_stroke-39c5566bc3.tsv  stroke-replay-stroke_recording_sample-f3783eb51e.tsv
crates/darkly/presets/: defaults.yaml  gimp.yaml  krita.yaml  photoshop.yaml
crates/darkly/src/: clipboard.rs  config.rs  coord.rs  document.rs  engine.rs  layer.rs  lib.rs  mask.rs  paint.rs  sdf.rs  tile.rs  tool.rs
crates/darkly/src/brush/: brush_tip.rs  builtin_brushes.rs  builtin_presets.rs  bundle.rs  checkpoint_ring.rs  composite_pipeline.rs  curve_math.rs  dab_pool.rs  eval.rs  gpu_context.rs  interpolation.rs  library.rs  mod.rs  node.rs  paint_info.rs  paint_target_ext.rs  pipeline.rs  pipelines.rs  preset.rs  preset_library.rs  preview_renderer.rs  preview_subgraph.rs  save_points.rs  scratch.rs  session.rs  spacing.rs  stabilizer.rs  state.rs  stroke_buffer.rs  stroke_engine.rs  wgsl_compile.rs  wire.rs
crates/darkly/src/brush/import/: mod.rs
crates/darkly/src/brush/nodes/: add.rs  circle.rs  clamp.rs  color_output.rs  constant.rs  curve.rs  image.rs  ink_pen_compute.rs  jitter.rs  levels.rs  liquify.rs  liquify_compiled.rs  make_color.rs  mix.rs  mod.rs  multiply.rs  paint.rs  paint_color.rs  paint_compiled.rs  paint_compute.rs  pen_input.rs  preview_output.rs  preview_terminal.rs  procedural.rs  random.rs  remap.rs  scatter.rs  smudge.rs  smudge_compiled.rs  split_color.rs  split_vec2.rs  stamp.rs  texture_overlay.rs  user_input.rs  watercolor.rs  watercolor_batched.rs  watercolor_compiled.rs  watercolor_compute.rs
crates/darkly/src/brush/stabilizers/: laplacian.rs  mod.rs
crates/darkly/src/brush/wgsl/: context.rs  dab_record.rs  extent.rs  intrinsics.rs  mod.rs  type_system.rs
crates/darkly/src/config/: mod.rs  schema.rs
crates/darkly/src/config/presets/: gimp.rs  krita.rs  mod.rs  photoshop.rs
crates/darkly/src/config/sections/: animation.rs  app.rs  bindings.rs  canvas.rs  colors.rs  display.rs  edit.rs  hotkeys.rs  input.rs  mod.rs  nav.rs  rendering.rs  tools.rs  ui.rs
crates/darkly/src/document/: layer_kind.rs  mod.rs  modifier.rs
crates/darkly/src/document/layer_kinds/: group.rs  mod.rs  raster.rs  void.rs
crates/darkly/src/engine/: bake_common.rs  brush_graph.rs  brush_library.rs  brush_preset.rs  clipboard.rs  duplicate.rs  export.rs  flatten.rs  floating.rs  gpu_selection.rs  layers.rs  load.rs  masks.rs  merge.rs  mod.rs  painting.rs  perf.rs  rendering.rs  save.rs  selection.rs  types.rs  undo_dispatch.rs  veils.rs
crates/darkly/src/format/: error.rs  manifest.rs  mod.rs  registry_io.rs  stroke_recording.rs  tests.rs  unzip.rs  zip_io.rs
crates/darkly/src/gpu/: atlas.rs  blend.rs  blend_mode.rs  compositor.rs  content_bounds.rs  context.rs  diff_rect.rs  effect.rs  filter.rs  floating_preview.rs  flood_fill.rs  mod.rs  overlay.rs  paint_target.rs  params.rs  readback.rs  region_store.rs  selection.rs  staging.rs  straight_composite.rs  test_utils.rs  texture_registry.rs  transform.rs  veil.rs  veil_chain.rs  view.rs  void.rs
crates/darkly/src/nodegraph/: compiler.rs  graph.rs  layout.rs  mod.rs  registration.rs
crates/darkly/src/tools/: brush.rs  colorpicker.rs  ellipse_select.rs  fill.rs  gradient.rs  lasso_select.rs  magic_wand.rs  mod.rs  polygon_select.rs  rect_select.rs  transform.rs
crates/darkly/src/undo/: compound.rs  gpu_region.rs  layer.rs  mask.rs  mod.rs  modifier.rs  property.rs  selection.rs  tile.rs  tombstones.rs
crates/darkly/tests/: blend_modes.rs  brush_begin_stroke_lifecycle.rs  brush_editor_preview.rs  brush_erase.rs  brush_picker_backend.rs  brush_preserves_pixels_outside_dab.rs  brush_preview.rs  brush_stamp_ports.rs  circle_node.rs  coord_invariants.rs  engine.rs  gpu_phase1.rs  gpu_phase2.rs  gpu_phase3.rs  gpu_phase4.rs  gpu_phase5.rs  gpu_undo_round_trip_preserves_pixels.rs  ink_pen_compute_alpha.rs  layer_bake.rs  layer_clipboard.rs  liquify.rs  liquify_compiled.rs  multi_engine.rs  paint_basic.rs  paint_compiled_basic.rs  paint_compute_alpha.rs  paint_compute_order.rs  paint_ops.rs  paint_target.rs  paint_terminal.rs  perlin_ink.rs  preview_liquify.rs  preview_paint.rs  preview_rotation.rs  preview_smudge.rs  preview_unit_invariance.rs  preview_watercolor.rs  probe_liquify.rs  profile_render.rs  region_store.rs  (+19 more)
crates/darkly/tests/fixtures/: recorded_curvy_stroke.json  stroke_recording_sample.json
frontend/wasm/: Cargo.toml
frontend/wasm/.cargo/: config.toml
frontend/wasm/src/: api.rs  config_bridge.rs  krita_inspect.rs  lib.rs
(+326 files in other folders)
