[workspace]
members = [
    "crates/darkly-core",
    "crates/darkly-gpu",
    "frontend/wasm",
]
resolver = "2"

[workspace.dependencies]
# Local crates
darkly-core = { path = "crates/darkly-core" }
darkly-gpu = { path = "crates/darkly-gpu" }

# GPU
wgpu = { version = "27.0", features = ["webgpu"] }

# Data
bytemuck = { version = "1.13", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

# WASM
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "=0.3.77"
web-sys = { version = "=0.3.77", features = [
    "HtmlCanvasElement",
    "Window",
    "Navigator",
    "Gpu",
    "OffscreenCanvas",
] }
console_error_panic_hook = "0.1"
console_log = "1"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
