[workspace]
members = [
    "crates/darkly",
    "frontend/wasm",
]
default-members = [
    "crates/darkly",
]
resolver = "2"

[workspace.dependencies]
# Local crates
darkly = { path = "crates/darkly" }

# GPU
wgpu = { version = "28.0", features = ["webgpu"] }

# Data
bytemuck = { version = "1.13", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
zip = { version = "8.3", default-features = false, features = ["deflate"] }

# WASM
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "=0.3.91"
web-sys = { version = "=0.3.91", features = [
    "HtmlCanvasElement",
    "Window",
    "Navigator",
    "Gpu",
    "OffscreenCanvas",
    "console",
] }
web-time = "1.1.0"
console_error_panic_hook = "0.1"
console_log = "1"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
