[package]
name = "darkly-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
darkly-core = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
