[package]
name = "darkly"
version = "0.1.0"
edition = "2021"

[features]
profile = []

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
web-time = { workspace = true }
zip = { workspace = true }
image = { workspace = true }
png = { workspace = true }
quick-xml = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pollster = "0.4"
naga = { version = "28.0", features = ["wgsl-in"] }
