[package]
name = "darkly"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
profile = []

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
log = { workspace = true }
web-time = { workspace = true }
zip = { workspace = true }
image = { workspace = true }
png = { workspace = true }
quick-xml = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
slotmap = { workspace = true }

[dev-dependencies]
pollster = "0.4"
naga = { version = "28.0", features = ["wgsl-in"] }
syn = { version = "2", features = ["visit", "full"] }

[lints]
workspace = true
