[package]
name = "darkly-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
profile = ["darkly/profile"]

[dependencies]
darkly = { workspace = true }
wgpu = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
log = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
